--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,12 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
 .navbar-container {
     display: flex;
     justify-content: space-between;
     padding: 18px;
-    margin: 0 24px 0 24px;
+    margin: 0 300px 0 300px;
     color: #F9FAF8;
 }
 
@@ -34,9 +35,8 @@
     flex-direction: row;
     justify-content: space-evenly;
     color: #F9FAF8;
-    margin: 0 24px 0 24px;
-    padding: 14px;
-    height: 325px;
+    margin: 0 300px 0 300px;
+    padding: 14px 0px 50px 0px;
 }
 
 .hero-banner h1 {
@@ -47,7 +47,7 @@
 
 .hero-banner img {
     width: 180px;
-    height: 180px;
+    height: 200px;
     align-self: center;
     margin: 30px;
     flex: 1;
@@ -60,7 +60,7 @@
 }
 
 .hero-banner button {
-    border-radius: 5px;
+    border-radius: 8px;
     padding: 5px 24px 5px 24px;
     background-color: #3882F6;
     color: #F9FAF8;
@@ -81,7 +81,7 @@
 .random-info-container {
     display: flex;
     flex-direction: column;
-    margin: 24px 24px 45px 24px;
+    margin: 24px 300px 45px 300px;
     justify-content: center;
 }
 
@@ -123,7 +123,7 @@
 .quote-container {
     display: flex;
     flex-direction: column;
-    padding: 100px 180px 100px 180px;
+    padding: 100px 400px 100px 400px;
     background-color: #E5E7EB;
 }
 
@@ -137,4 +137,45 @@
     text-align: end;
     font-weight: bolder;
     padding: 12px 0px 0px 12px;
+}
+
+.sign-up-banner-container {
+    margin: 50px 350px 50px 350px;
+}
+
+.inner-sign-up-container {
+    display: flex;
+    flex-direction: row;
+    background-color: #3882F6;
+    justify-content: space-between;
+    padding: 50px 80px 50px 80px;
+    border-radius: 8px;
+}
+
+.sign-up-content {
+    color: #E5E7EB;
+
+}
+
+.sign-up-button {
+    align-self: center;
+    justify-self: center;
+    color: #F9FAF8;
+    border: 2px solid #f9f9f9;
+    border-radius: 8px;
+}
+
+.sign-up-button p {
+    padding: 5px 25px 5px 25px;
+}
+
+a {
+    text-decoration: none;
+    color: #F9FAF8;
+}
+
+.footer {
+    color: #F9FAF8;
+    text-align: center;
+    padding: 50px 0 50px 0;
 }
